--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -22,3 +23,10 @@ jobs:
         run : mvn clean install
       - name : Run tests
         run : mvn test
+        if: ${{contains(github.event.head_commit.message , ”test commit”)}}
+      -	name: Upload jar to Github
+        if: ${{success()}}
+        uses: actions/upload–artifact@v3
+        with:
+          name: myapp-jar
+          path: target/*.jar
