--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,14 +22,14 @@ services:
       - "8081:8080"
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/mydatabase
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_DATASOURCE_USERNAME: gagan
+      SPRING_DATASOURCE_PASSWORD: gagan
 
   react-app:
     build:
-      context: ./D:\\Revature_training\\week8\\docker-app
+      context: ../docker-app
     ports:
-      - "3000:3010"
+      - "3000:3000"
     depends_on:
       - springboot-app
 
