--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=springbootdemo
-spring.datasource.url=jdbc:sqlserver://revtaskserver.database.windows.net:1433;database=sampledatabase;user=gaganvaishnav@revtaskserver;password=Gagan@2002;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.url=jdbc:sqlserver://revtaskserver.database.windows.net:1433;database=sampledatabase;user=gaganvaishnav@revtaskserver;password=Gagan@2002;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 #spring.datasource.username=gaganvaishnav
 #spring.datasource.password=Gagan@2002
-#spring.datasource.url=jdbc:mysql://localhost:3306/sampledb
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/sampledb
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
