--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,11 @@ name : spring GHA
 on:
   push:
     branches:
+      - main
       - master
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -23,10 +24,10 @@ jobs:
         run : mvn clean install
       - name : Run tests
         run : mvn test
-        if: ${{contains(github.event.head_commit.message , ”test commit”)}}
-      -	name: Upload jar to Github
+        if: ${{contains(github.event.head_commit.message , 'test commit')}}
+      - name: Upload jar to Github
         if: ${{success()}}
-        uses: actions/upload–artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: myapp-jar
           path: target/*.jar
