--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,15 @@ jobs:
       - name : Run tests
         run : mvn test
         if: ${{contains(github.event.head_commit.message , 'test commit ')}}
+      - name: Check results
+        run:
+          echo “event = ${{github.event_name}}”
+          echo “Repository = ${{github.repository}}”
+          echo “JOB ID = ${{github.job}}”
+          echo “RUN ID = ${{github.run_id}}”
+          echo “User = ${{github.actor}}”
       - name: Upload jar to Github
-        if: ${{success()}}
+        if: ${{contains(github.actor,'gaganvaishnav111')}}
         uses: actions/upload-artifact@v3
         with:
           name: myapp-jar
